# switchbot-client

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml  main.yml
.github/workflows/: main.yml
docs/: conf.py  index.rst  modules.rst  switchbot_client.devices.rst  switchbot_client.rst  switchbot_client.scenes.rst  switchbot_client.webhooks.rst
scripts/: cov.sh  fix.sh  generate_docs.sh  run_tests.sh  test.sh
switchbot_client/: __init__.py  api.py  client.py  constants.py  devices.py  enums.py  types.py
switchbot_client/devices/: __init__.py  base.py  factory.py  physical.py  remote.py  status.py
switchbot_client/scenes/: base.py
switchbot_client/webhooks/: base.py
tests/: conftest.py  test_api.py  test_client.py  test_devices.py
tests/devices/: test_remote.py
