[tool.poetry]
name = "switchbot-client"
version = "0.4.1"
description = "A Python client library for SwitchBot API."
license = "Apache-2.0 or MIT"
authors = [
    "Kazuhito Osabe <kzosabe@wip.place>"
]
readme = "README.md"
repository = "https://github.com/kzosabe/switchbot-client"
homepage = "https://github.com/kzosabe/switchbot-client"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.0"
PyYAML = ">=5.4.1,<7.0.0"
typing-extensions = ">=3.10,<5.0"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
flake8 = "^5.0.4"
isort = "^5.9.3"
mypy = "^0.981"
pylint = "^2.13.9"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
tox = "^3.26.0"
Sphinx = "^4.3.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."message control"]
disable = ["C0114,C0115,C0116,R0801,R0902,R0903,R0913"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
